[package]
name = "rusty_ladder"
version = "0.1.6"
authors = ["reddal"]
edition = "2018"
license = "GPL-3.0"

[features]
default = [
    "use-tui",
    "all-transports-rustls",
    "all-proxies-ring",
    "use-udp",
    "parse-url-v2rayn",
    "parse-config",
]

# Enable commandline options to parse URL.
parse-url = ["ladder_lib/parse-url"]
# Enable commandline options to parse URL using v2rayn format if possible.
# This feature only works on VMess proxy.
parse-url-v2rayn = ["parse-url", "ladder_lib/parse-url-v2rayn"]

# Enable commandline options that parses JSON or TOML config.
parse-config = ["ladder_lib/use_serde", "serde", "serde_json", "toml"]

local-dns = ["ladder_lib/local-dns"]
local-dns-over-openssl = ["ladder_lib/local-dns-over-openssl"]
local-dns-over-rustls = ["ladder_lib/local-dns-over-rustls"]

use-udp = ["ladder_lib/use-udp"]
use-tui = ["tui", "crossterm"]
use-webapi = ["ladder_lib/use-webapi"]
# Enable reading geosite file of v2ray for router rules.
#
# Some geosite file may contain regex, you will need 
# to enable feature `use-router-regex` to decode.
use-protobuf = ["ladder_lib/use-protobuf"]
# Enable using regex as router rule.
use-router-regex = ["ladder_lib/use-router-regex"]

############## Transport ##############

all-transports-openssl = [
	"h2-transport-openssl",
	"ws-transport-openssl",
	"tls-transport-openssl",
]

all-transports-rustls = [
	"h2-transport-rustls",
	"ws-transport-rustls",
	"tls-transport-rustls",
]

ws-transport-openssl = ["ladder_lib/ws-transport-openssl"]
tls-transport-openssl = ["ladder_lib/tls-transport-openssl"]
h2-transport-openssl = ["ladder_lib/h2-transport-openssl"]

ws-transport-rustls = ["ladder_lib/ws-transport-rustls"]
tls-transport-rustls = ["ladder_lib/tls-transport-rustls"]
h2-transport-rustls = ["ladder_lib/h2-transport-rustls"]

############## Proxies ##############
all-proxies-openssl = [
	"socks5",
	"http-proxy",
	"shadowsocks-openssl",
	"chain-outbound",
	"trojan-outbound",
	"vmess-openssl",
]
all-proxies-ring = [
	"socks5",
	"http-proxy",
	"shadowsocks-ring",
	"chain-outbound",
	"trojan-outbound",
	"vmess-ring",
]

# ------------ SOCKS5 ------------
socks5 = ["socks5-inbound", "socks5-outbound"]
socks5-inbound = ["ladder_lib/socks5-inbound"]
socks5-outbound = ["ladder_lib/socks5-outbound"]

# ------------ HTTP ------------
http-proxy = ["http-inbound", "http-outbound"]
http-inbound = ["ladder_lib/http-inbound"]
http-outbound = ["ladder_lib/http-outbound"]

# ------------ Shadowsocks ------------
shadowsocks-openssl = [
	"shadowsocks-inbound-openssl",
	"shadowsocks-outbound-openssl",
]
shadowsocks-inbound-openssl = ["ladder_lib/shadowsocks-inbound-openssl"]
shadowsocks-outbound-openssl = ["ladder_lib/shadowsocks-outbound-openssl"]

shadowsocks-ring = ["shadowsocks-inbound-ring", "shadowsocks-outbound-ring"]
shadowsocks-inbound-ring = ["ladder_lib/shadowsocks-inbound-ring"]
shadowsocks-outbound-ring = ["ladder_lib/shadowsocks-outbound-ring"]

# ------------ VMess ------------
vmess-legacy-auth = ["ladder_lib/vmess-legacy-auth"]

vmess-openssl = ["vmess-inbound-openssl", "vmess-outbound-openssl"]
vmess-inbound-openssl = ["ladder_lib/vmess-inbound-openssl"]
vmess-outbound-openssl = ["ladder_lib/vmess-outbound-openssl"]

vmess-ring = ["vmess-inbound-ring", "vmess-outbound-ring"]
vmess-inbound-ring = ["ladder_lib/vmess-inbound-ring"]
vmess-outbound-ring = ["ladder_lib/vmess-outbound-ring"]

# ------------ Other proxies ------------
chain-outbound = ["ladder_lib/chain-outbound"]
trojan-outbound = ["ladder_lib/trojan-outbound"]

[dependencies]
ladder_lib = { version = "*", path = "../ladder_lib", default-features = false, features = [] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.5", optional = true }
structopt = "0.3"
log = { version = "0.4", default-features = false, features = [
    "std",
    "release_max_level_info",
    "serde",
] }
tokio = { version = "1.0" }
tui = { version = "0.18", optional = true }
crossterm = { version = "0.23", optional = true }
futures = "0.3"
lazy_static = "1.4"
exitcode = "1.1"
thiserror = "1.0"
smol_str = "0.1"
url = { version = "2" }

# Logging
fern = { version = "0.6", features = ["colored"] }
time = { version = "0.3", features = ["formatting"] }
