[package]
name = "speed_tester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
] }
toml = "0.5"
serde = { version = "1.0", features = ["serde_derive"] }
